--- a/slider.html
+++ b/slider.html
@@ -21,6 +21,21 @@
     <li class="slide" >
       <img src="img_3.png" />
     </li>
+    <li class="slide" >
+      <img src="img_4.png" />
+    </li>
+    <li class="slide" >
+      <img src="img_5.png" />
+    </li>
+    <li class="slide" >
+      <img src="img_6.png" />
+    </li>
+    <li class="slide" >
+      <img src="img_7.png" />
+    </li>
+    <li class="slide" >
+      <img src="img_8.png" />
+    </li>
     </ul>
     
  </div>
