--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <meta name="theme-color" content="#ff0000">
      
         <link rel="icon" type="image/png" href="icon-gf.png">
-        
+        <meta name="google-site-verification" content="aJMf4XJb36Ku1PUdFauBJg-MHOv7tcd93kQC20TtFaA" />
         <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
   <title>G2-Kappa - Download App</title>
@@ -39,7 +39,7 @@
    </div>
    
    <div class="iframe">
-     <iframe id="" src="slider.html" frameborder="0"></iframe>
+     <iframe id="" src="slider.html" frameborder="0" rel="next"></iframe>
    </div>
 <!--
 <div class="footer">
