--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
   
    <img class="logo" src="gigafilmes-logo.png" alt="G2-Kappa - Logo.png">
    
-   <h2>G2-Kappa - Aplicativo Web</h2>
+   <h2>My_G2 - Aplicativo Web</h2>
    </div>
    
    <div class="p_download">
      
    <p class="info">
-     G2-kappa, é um aplicativo beta para assistir filmes e séries online, de forma gratuita sem anúncios. Aproveite!!!
+     My_G2, é um aplicativo beta para assistir filmes e séries online, de forma gratuita sem anúncios. Aproveite!!!
      </p>
     
    </div>
    
    <div class="btn">
-     <a class="btn_d" href="#">BAIXAR</a>
+     <a class="btn_d" href="My_G2.apk" download="My_G2.apk" type="aplication/vnd.android.package-archive">BAIXAR APP</a>
    </div>
    
    <div class="iframe">
